# miotts-cockpit

./: .gitignore  LICENSE  Makefile  README-ja.md  README.md  miotts-cockpit.service  pyproject.toml  server.py  services.yaml.example
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Controls.tsx  GpuMetrics.tsx  LogViewer.tsx  ModelSelector.tsx  Playground.tsx  Presets.tsx  StatusPanel.tsx
